fixed broken css on food list

--- a/client/src/styles/Card.css
+++ b/client/src/styles/Card.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.15);
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
     /* border-radius: 5px; */
     height: 200px;
     width: 200px;
