--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -19,10 +19,12 @@
    background-image: url("/Users/williamlong/general-assembly/unit2/projects/cookbook/client/src/assets/background.jpg");
  }
 
-.welcome-msg{
+.welcome{
    display: flex;
    font-size: 1.75rem;
-   font-family: 'sybarite', serif;
+
+
+   font-family: 'sybarite', serif !important;
 }
 
 .yellow-block{
